# vmware-discovery

./: README.md  ReleaseNote.md  requirements.txt  setup.cfg  setup.py
etc/: vmware-discovery.conf
init.d/: vmware-discovery
systemd/: openstack-vmware-discovery.service
vmware_discovery/: discovery_manager.py  utils.py
vmware_discovery/cmd/: __init__.py  discovery.py  sync_instance.py  sync_portgroup.py  sync_template.py
vmware_discovery/common/: __init__.py  config.py  constants.py  db_session.py  exception.py  gettextutils.py  interval_timer.py  models.py  netutils.py  utils.py  vmwareapi.py
vmware_discovery/common/client/: config.py  delegate.py  factory.py  service.py
vmware_discovery/common/client/patch/: cinder.py  glance.py  neutron.py  nova.py
vmware_discovery/portgroup/: models.py  network_util.py  portgroup_manager.py  uuidutil.py  vmware_util.py
vmware_discovery/template/: glance_utils.py  main.py  template_importer.py  template_manager.py
