[metadata]
name = vmware-discovery
version = 2016.11
summary = Openstack Cloud Platform to register for the Virtual Machine for vmware driver
description-file =
    README.md
author = Vsettan Cloud Team
author-email = lixx@vsettan.com.cn
home-page = https://github.com/lilingxing20/vmware-discovery
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vmware_discovery
data_files =
    /etc =
        etc/vmware-discovery.conf
scripts =
    bin/vmware-discovery

[entry_points]
nova.compute.driver =
    vdm = vmware_discovery.nova.driver.compute.manager.VMwareDiscoveryManager

[build_sphinx]
all_files = 1

[build_apiguide]
all_files = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

